--- a/calendarapp/static/calendarapp/styles.css
+++ b/calendarapp/static/calendarapp/styles.css
@@ -27,3 +27,12 @@ tbody tr {
     background-color: white;
     color: black; /* Ensure text contrasts with the row's background color */
 }
+th a {
+    text-decoration: none;
+    color: black;
+}
+
+th a:hover {
+    color: blue;
+    text-decoration: underline;
+}
